allprojects {
    version = mod_version
    group = maven_group

    configurations {
        compileClasspath
    }
}

ext {
    launch_mod = ''
    build_modifier = ""
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'idea'

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17

    repositories {
        mavenCentral()
        maven { url "https://repo.spongepowered.org/repository/maven-public/"}
    }

    tasks.withType(GenerateModuleMetadata) {
        enabled = false
    }
}
